orbs/wc/3/work/compile.log
wc.c: In function ‘main’:
wc.c:4:1: error: expected declaration or statement at end of input
 {
 ^
